--- a/public/css/home.css
+++ b/public/css/home.css
@@ -131,26 +131,6 @@ sidebar  img {
     gap: 5px;
 }
 
-/* table {
-
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px 0px 0px 0px;
-}
-
-.table-header th {
-    text-align: left;
-    margin-top: 24px;
-    padding: 15px;
-    border-bottom: 1px solid #000000;
-    color: #000000;
-}
-
-.table-info tr {
-    background-color: #f2f2f2;
-    gap: 143px;
-} */
-
 table {
     width: 100%;
     border-collapse: collapse;
@@ -193,7 +173,11 @@ table {
   tbody tr td:last-child {
     text-align: left;
   }
-  
+  .contact{
+    text-decoration: none;
+    font-size: 18px;
+    color: #000000;
+  }
   @media (max-width: 768px) {
     .container {
       width: 100%;
